# White-box-SM4-algorithm

./: README.md
Xiao-Lai-White-box-SM4-master/test/: main.c
dwbsm4/: CMakeLists.txt  WBMatrix.c  WBMatrix.h  dwbsm4.sln  dwbsm4.vcxproj  dwbsm4.vcxproj.filters  main.c  readme.txt  sm4.c  wbsm4.c  wbsm4.h
dwbsm4/x64/Debug/: dwbsm4.exe.recipe  dwbsm4.ilk  dwbsm4.vcxproj.FileListAbsolute.txt  vc143.idb
dwbsm4/x64/Debug/dwbsm4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dwbsm4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
